# pyjabcode

./: .gitignore  CMakeLists.txt  LICENSE-APACHE  README.md  build.sh  cibuildwheel.toml  pyproject.toml
.github/workflows/: build-wheels.yml  build.yml
cmake/: tiff_stub.c
pyjabcode/: __init__.py
src/jabcodeReader/: Makefile
src/jabcodeWriter/: Makefile
tests/: test_jabcode.py
